add all end-points
